--- a/index.html
+++ b/index.html
@@ -366,14 +366,14 @@
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="404.html">
-                                    <span class="category">category</span>
+                                    <span class="category">Web Development</span>
                                 </a>
                                 <a href="404.html">
                                     <img src="images/blog/1.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
                             <div class="details">
-                                <h4 class="my-0 title"><a href="404.html">project1</a></h4>
+                                <h4 class="my-0 title"><a href="https://pranjal2523.github.io/portfolio_website">Portfolio Website</a></h4>
                                 <ul class="list-inline meta mb-0 mt-2">
                                     <li class="list-inline-item">11 May, 2021</li>
                                     <li class="list-inline-item">Pranjal</li>
