--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://linkedin.com/in/pranjal2325"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href=#><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href=https://github.com/pranjal2523><i class="fab fa-github" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://facebook.com/pranjal.bajpai.12"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                     </ul>
 
@@ -387,16 +387,16 @@
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="404.html">
-                                    <span class="category">category</span>
+                                    <span class="category">Python</span>
                                 </a>
                                 <a href="404.html">
                                     <img src="images/blog/2.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
                             <div class="details">
-                                <h4 class="my-0 title"><a href="404.html">project2</a></h4>
+                                <h4 class="my-0 title"><a href="https://github.com/pranjal2523/Virtual-Assistant">Virtual Assistant</a></h4>
                                 <ul class="list-inline meta mb-0 mt-2">
-                                    <li class="list-inline-item">11 May, 2021</li>
+                                    <li class="list-inline-item">2021</li>
                                     <li class="list-inline-item">Pranjal</li>
                                 </ul>
                             </div>
@@ -408,16 +408,16 @@
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="404.html">
-                                    <span class="category">category</span>
+                                    <span class="category">Python</span>
                                 </a>
                                 <a href="404.html">
                                     <img src="images/blog/3.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
                             <div class="details">
-                                <h4 class="my-0 title"><a href="404.html">project3</a></h4>
+                                <h4 class="my-0 title"><a href="https://colab.research.google.com/drive/11XZrqjcHFOfQc26gc62rSrd1pxpDg-xP?usp=sharing">Automatic Number Plate Detection</a></h4>
                                 <ul class="list-inline meta mb-0 mt-2">
-                                    <li class="list-inline-item">11 May, 2021</li>
+                                    <li class="list-inline-item">2022</li>
                                     <li class="list-inline-item">Pranjal</li>
                                 </ul>
                             </div>
