--- a/404.html
+++ b/404.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>404 | Saksham Shekher - Student | Kanger</title>
+    <title>404 | Pranjal Bajpai - Student | Kanger</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="author" content="Saksham Shekher">
-    <meta name="copyright" content="This Created by Saksham Shekher">
+    <meta name="author" content="Pranjal Bajpai">
     <meta name="robots" content="all" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
@@ -18,7 +17,7 @@
             </div>
             <div class="central-body">
                 <img class="image-404" src="img-404/404.svg" width="300px">
-                <a href="#" class="btn-go-home">GO BACK HOME</a>
+                <a href="index.html" class="btn-go-home">GO BACK HOME</a>
             </div>
             <div class="objects">
                 <img class="object_rocket" src="img-404/rocket.svg" width="40px">
