--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <div class="details">
                                 <h4 class="my-0 title"><a href="https://pranjal2523.github.io/portfolio_website">Portfolio Website</a></h4>
                                 <ul class="list-inline meta mb-0 mt-2">
-                                    <li class="list-inline-item">11 May, 2021</li>
+                                    <li class="list-inline-item">2021</li>
                                     <li class="list-inline-item">Pranjal</li>
                                 </ul>
                             </div>
