--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pranjal Bajpai - Student | Developer | Coding is a beautiful Life !</title>
     <meta name="description" content="Pranjal Bajpai - Student | Developer I am a collage student and I am a also developer from the kanpur, I like create something new !!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://github.com/pranjal2523/portfolio_website/blob/main/images/favicon.png">
   
 
     <!-- STYLESHEETS -->
