--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="col-md-3">
                         <div class="text-center text-md-left">
                             <!-- avatar image -->
-                            <img src="images/avatar-2.svg" alt="Avishkar Patil" />
+                            <img src="images/avatar-2.svg" alt="Pranjal Bajpai" />
                         </div>
                         <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                     </div>
