--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <body class="dark">
 
-    <!-- Preloader -->
+    <!-- Preloader 
+
     <div id="preloader">
         <div class="outer">
             <!-- Google Chrome -->
@@ -56,7 +57,7 @@
 		</svg>
         </div>
     </div>
-
+end of prelloader -->
     <!-- desktop header -->
     <header class="desktop-header-3 fixed-top">
 
