--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 
     <div id="preloader">
         <div class="outer">
-            <!-- Google Chrome -->
+
+             Google Chrome 
             <div class="infinityChrome">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
 
-            <!-- Safari and others -->
+         Safari and others 
             <div class="infinity">
                 <div>
                     <span></span>
@@ -45,7 +46,7 @@
                     <span></span>
                 </div>
             </div>
-            <!-- Stuff -->
+            Stuff 
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo-outer">
 			<defs>
 				<filter id="goo">
