--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ end of prelloader -->
                                     <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                                 </div>
                                 <div class="col-md-6">
-                                    <!-- skill item -->
+                                    <!-- item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">Study and Prepration</h4>
@@ -198,7 +198,7 @@ end of prelloader -->
                                         <div class="spacer" data-height="20"></div>
                                     </div>
 
-                                    <!-- skill item -->
+                                    <!-- item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">Other Activites</h4>
@@ -211,7 +211,7 @@ end of prelloader -->
                                         <div class="spacer" data-height="20"></div>
                                     </div>
 
-                                    <!-- skill item -->
+                                    <!-- item -->
                                     <div class="skill-item">
                                         <div class="skill-info clearfix">
                                             <h4 class="float-left mb-3 mt-0">Collage Life</h4>
@@ -278,7 +278,7 @@ end of prelloader -->
 
 
                     <div class="col-md-4">
-                        <!-- service box -->
+                        <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
                             <img src="images/certificates/certificate1.png"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Engineering Virtual Program</h3>
@@ -298,7 +298,7 @@ end of prelloader -->
 
 
                     <div class="col-md-4">
-                        <!-- service box -->
+                        <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
                             <img src="images/certificates/certificate3.png"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Python</h3>
@@ -313,7 +313,7 @@ end of prelloader -->
 
 
                     <div class="col-md-4">
-                        <!-- service box -->
+                        <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
                             <img src="images/certificates/certificate4.png"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">SQL</h3>                   
@@ -323,7 +323,7 @@ end of prelloader -->
 
 
                     <div class="col-md-4">
-                        <!-- service box -->
+                        <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
                             <img src="images/certificates/certificate5.png"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Problem Solving</h3>
@@ -333,7 +333,7 @@ end of prelloader -->
 
 
                     <div class="col-md-4">
-                        <!-- service box -->
+                        <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
                             <img src="images/certificates/certificate6.png"/>
                             <h3 class="mb-3 mt-0" style="color: #010101;">Java</h3>
@@ -364,13 +364,13 @@ end of prelloader -->
                 <div class="row blog-wrapper">
 
                     <div class="col-md-4">
-                        <!-- blog item -->
+                        <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
-                                <a href="404.html">
+                                <a href="https://pranjal2523.github.io/portfolio_website">
                                     <span class="category">Web Development</span>
                                 </a>
-                                <a href="404.html">
+                                <a href="https://pranjal2523.github.io/portfolio_website">
                                     <img src="images/blog/1.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
@@ -385,13 +385,13 @@ end of prelloader -->
                     </div>
 
                     <div class="col-md-4">
-                        <!-- blog item -->
+                        <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
-                                <a href="404.html">
+                                <a href="https://github.com/pranjal2523/Virtual-Assistant">
                                     <span class="category">Python</span>
                                 </a>
-                                <a href="404.html">
+                                <a href="https://github.com/pranjal2523/Virtual-Assistant">
                                     <img src="images/blog/2.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
@@ -406,13 +406,13 @@ end of prelloader -->
                     </div>
 
                     <div class="col-md-4">
-                        <!-- blog item -->
+                        <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
-                                <a href="404.html">
+                                <a href="https://colab.research.google.com/drive/11XZrqjcHFOfQc26gc62rSrd1pxpDg-xP?usp=sharing">
                                     <span class="category">Python</span>
                                 </a>
-                                <a href="404.html">
+                                <a href="https://colab.research.google.com/drive/11XZrqjcHFOfQc26gc62rSrd1pxpDg-xP?usp=sharing">
                                     <img src="images/blog/3.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
