--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pranjal Bajpai - Student | Developer | Coding is a beautiful Life !</title>
     <meta name="description" content="Pranjal Bajpai - Student | Developer I am a collage student and I am a also developer from the kanpur, I like create something new !!">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="https://github.com/pranjal2523/portfolio_website/blob/main/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://github.com/pranjal2523/portfolio_website/images/favicon.png">
   
 
     <!-- STYLESHEETS -->
@@ -74,6 +74,8 @@ end of prelloader -->
                         <li class="nav-item"><a href="#certificate" class="nav-link">Certificates</a></li>
                         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item"><a href="#contact" class="nav-link">Contact Me</a></li>
+                        <li class="nav-item"><a href="https://drive.google.com/file/d/1hVtw17epPtzMXljHYfsmOYRyzQcga_PS/view?usp=sharing" class="nav-link">
+                            <i style="font-weight: bold; color: #01e3f8;">Resume</i></a></li>
                     </ul>
                 </div>
             </nav>
