--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ end of prelloader -->
                     <div class="col-md-4">
                         <!-- box -->
                         <div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
-                            <img src="images/certificates/certificate6.png"/>
+                            <img src="images/certificates/certificate6.png">
                             <h3 class="mb-3 mt-0" style="color: #010101;">Java</h3>
                         </div>
                     </div>
