--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ end of prelloader -->
                         <li class="nav-item"><a href="#certificate" class="nav-link">Certificates</a></li>
                         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item"><a href="#contact" class="nav-link">Contact Me</a></li>
-                        <li class="nav-item"><a href="https://drive.google.com/file/d/1qZTeWBogLjBMG7CrDEjEJ6Y5MoHvwXTr/view?usp=sharing">
+                        <li class="nav-item"><a href="https://drive.google.com/file/d/1IN8jCxTbpc4uI8Y4JAbFH9cY3tU_f2Qn/view?usp=sharing">
                             <i style="font-weight: bold; color: #01e3f8;">Resume</i></a></li>
                     </ul>
                 </div>
@@ -102,16 +102,20 @@ end of prelloader -->
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
-                        <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://linkedin.com/in/pranjal2325"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href=https://github.com/pranjal2523><i class="fab fa-github" aria-hidden="true"></i></a></li>
+			<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><i class="fab fa-Leetcode" aria-hidden="true"></i></a></li>
+			<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><i class="fab fa-Codechef" aria-hidden="true"></i></a></li>
+			<li class="list-inline-item"><a href="https://www.hackerrank.com/pranjalbjp2523"><i class="fab fa-Hackerrank" aria-hidden="true"></i></a></li>    
+                        <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://facebook.com/pranjal.bajpai.12"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                    </ul>
+                        <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>    
+		</ul>
 
                     <!-- buttons -->
                     <div class="mt-4">
-                        <a href="https://linkedin.com/in/pranjal2325" class="btn btn-default1" style="background-color: #6517ad;">Hire me</a>
+                        <a href="https://linkedin.com/in/pranjal2325" class="btn btn-default1" style="background-color: #6517ad;">Connect on LinkedIn</a>
                     </div>
                 </div>
 
@@ -182,7 +186,7 @@ end of prelloader -->
                                     <!-- about text -->
                                     <p>I am Pranjal Bajpai, Student of B.Tech Final year.<br>I love Coding &#128151</p>
                                     <div class="mt-3">
-                                        <a href=# class="btn btn-default">Hire Me</a>
+                                        <a href="https://drive.google.com/file/d/1IN8jCxTbpc4uI8Y4JAbFH9cY3tU_f2Qn/view?usp=sharing" class="btn btn-default">Resume</a>
                                     </div>
                                     <div class="spacer d-md-none d-lg-none" data-height="30"></div>
                                 </div>
@@ -364,9 +368,31 @@ end of prelloader -->
                 <div class="spacer" data-height="60"></div>
 
                 <div class="row blog-wrapper">
+		    
+		    
+		    <div class="col-md-4">
+			<!-- item -->
+                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                            <div class="thumb">
+                                <a href="https://github.com/pranjal2523/Django_Ecommerce">
+                                    <span class="category">Web Development</span>
+                                </a>
+                                <a href="https://github.com/pranjal2523/Django_Ecommerce">
+                                    <img src="images/blog/1.svg" alt="Post by Pranjal" />
+                                </a>
+                            </div>
+                            <div class="details">
+                                <h4 class="my-0 title"><a href="https://github.com/pranjal2523/Django_Ecommerce">Django Ecommerce Website</a></h4>
+                                <ul class="list-inline meta mb-0 mt-2">
+                                    <li class="list-inline-item">2023</li>
+                                    <li class="list-inline-item">Pranjal</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-md-4">
-                        <!-- item -->
+			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="https://pranjal2523.github.io/portfolio_website">
@@ -435,7 +461,7 @@ end of prelloader -->
         </section>
 
 		    <div class="mt-5 text-center">
-                    <p class="mb-0">You want friendship with me ? <a href=# style="color: #13f14d;">Click here</a> to Message me! 👋</p>
+                    <p class="mb-0">You want friendship with me ? <a href="https://linkedin.com/in/pranjal2325" style="color: #13f14d;">Click here</a> to Message me! 👋</p>
                 </div>
 
 
