--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ end of prelloader -->
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://linkedin.com/in/pranjal2325"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href=https://github.com/pranjal2523><i class="fab fa-github" aria-hidden="true"></i></a></li>
-			<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><i class="fab fa-Leetcode" aria-hidden="true"></i></a></li>
-			<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><i class="fab fa-Codechef" aria-hidden="true"></i></a></li>
-			<li class="list-inline-item"><a href="https://www.hackerrank.com/pranjalbjp2523"><i class="fab fa-Hackerrank" aria-hidden="true"></i></a></li>    
+			<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><iconify-icon icon="simple-icons:leetcode"></iconify-icon></a></li>
+			<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><img src="https://github.com/pranjal2523/Django_Ecommerce/blob/master/screenshot/codechef.svg' /></a></li>
+			<li class="list-inline-item"><a href="https://www.hackerrank.com/pranjalbjp2523"><i class="fa-brands fa-hackerrank"></i></a></li>    
                         <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://facebook.com/pranjal.bajpai.12"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>    
@@ -504,7 +504,7 @@ end of prelloader -->
 <!--
      Go to top button-->
     <a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>
-
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
