--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ end of prelloader -->
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://linkedin.com/in/pranjal2325"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href=https://github.com/pranjal2523><i class="fab fa-github" aria-hidden="true"></i></a></li>
-			<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><iconify-icon icon="simple-icons:leetcode"></iconify-icon></a></li>
-			<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><img src="screenshot/codechef.svg' /></a></li>
+			<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><iconify-icon icon="simple-icons:leetcode" aria-hidden="true"></iconify-icon></a></li>
+			<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><img src="screenshot/codechef.svg" /></a></li>
 			<li class="list-inline-item"><a href="https://www.hackerrank.com/pranjalbjp2523"><i class="fa-brands fa-hackerrank" aria-hidden="true"></i></a></li>    
                         <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://facebook.com/pranjal.bajpai.12"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
