update link items
Signed-off-by: Pranjal Bajpai <76218069+pranjal2523@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -102,20 +102,22 @@ end of prelloader -->
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
-                        <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://linkedin.com/in/pranjal2325"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href=https://github.com/pranjal2523><i class="fab fa-github" aria-hidden="true"></i></a></li>
-			<!--<li class="list-inline-item"><a href="https://leetcode.com/pranjal23"><iconify-icon icon="simple-icons:leetcode" aria-hidden="true"></iconify-icon></a></li>
-		-->	<li class="list-inline-item"><a href="https://www.codechef.com/users/pranjal2523"><img src="images/codechef.svg" /></a></li>
-			<li class="list-inline-item"><a href="https://www.hackerrank.com/pranjalbjp2523"><i class="fa-brands fa-hackerrank" aria-hidden="true"></i></a></li>    
-                        <li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+			<li class="list-inline-item"><a href="https://instagram.com/pranjal_2523"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://facebook.com/pranjal.bajpai.12"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://t.me/Pranjal_bajpai"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>    
 		</ul>
 
                     <!-- buttons -->
                     <div class="mt-4">
-                        <a href="https://linkedin.com/in/pranjal2325" class="btn btn-default1" style="background-color: #6517ad;">Connect on LinkedIn</a>
+                        <a href="https://leetcode.com/pranjal23" class="btn btn-default1" style="background-color: #6517ad;">LeetCode</a>
+                    </div>
+		     <div class="mt-4">
+                        <a href="https://www.hackerrank.com/pranjalbjp2523" class="btn btn-default1" style="background-color: #6517ad;">HackerRank</a>
+                    </div>
+		     <div class="mt-4">
+                        <a href="https://www.codechef.com/users/pranjal2523" class="btn btn-default1" style="background-color: #6517ad;">CodeChef</a>
                     </div>
                 </div>
 
