adding react app
Signed-off-by: Pranjal Bajpai <76218069+pranjal2523@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -370,6 +370,27 @@ end of prelloader -->
                 <div class="spacer" data-height="60"></div>
 
                 <div class="row blog-wrapper">
+			
+		    <div class="col-md-4">
+			<!-- item -->
+                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                            <div class="thumb">
+                                <a href="https://game-hvyz7fjf9-pranjal2523.vercel.app/">
+                                    <span class="category">React</span>
+                                </a>
+                                <a href="https://game-hvyz7fjf9-pranjal2523.vercel.app/">
+                                    <img src="blob:https://vercel.com/9bc862c1-d6f7-4cdc-b895-10767c3e570a" alt="Post by Pranjal" />
+                                </a>
+                            </div>
+                            <div class="details">
+                                <h4 class="my-0 title"><a href="https://game-hvyz7fjf9-pranjal2523.vercel.app/">Game Hub</a></h4>
+                                <ul class="list-inline meta mb-0 mt-2">
+                                    <li class="list-inline-item">2023</li>
+                                    <li class="list-inline-item">Pranjal</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>	
 		    
 		    
 		    <div class="col-md-4">
@@ -377,7 +398,7 @@ end of prelloader -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
                                 <a href="https://github.com/pranjal2523/Django_Ecommerce">
-                                    <span class="category">Web Development</span>
+                                    <span class="category">Django</span>
                                 </a>
                                 <a href="https://github.com/pranjal2523/Django_Ecommerce">
                                     <img src="images/blog/1.svg" alt="Post by Pranjal" />
