adding react project
Signed-off-by: Pranjal Bajpai <76218069+pranjal2523@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ end of prelloader -->
                                     <span class="category">React</span>
                                 </a>
                                 <a href="https://game-hvyz7fjf9-pranjal2523.vercel.app/">
-                                    <img src="blob:https://vercel.com/9bc862c1-d6f7-4cdc-b895-10767c3e570a" alt="Post by Pranjal" />
+                                    <img src="images/blog/2.svg" alt="Post by Pranjal" />
                                 </a>
                             </div>
                             <div class="details">
