--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ end of prelloader -->
 
                 <div class="row blog-wrapper">
 			
-		    <div class="col-md-4">
+		    <div class="col-md-4 margin">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -393,7 +393,7 @@ end of prelloader -->
                     </div>	
 		    
 		    
-		    <div class="col-md-4">
+		    <div class="col-md-4 margin">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -414,7 +414,7 @@ end of prelloader -->
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 margin">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -435,7 +435,7 @@ end of prelloader -->
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 margin">
                         <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -456,7 +456,7 @@ end of prelloader -->
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 margin">
                         <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
