add space between project cards
Signed-off-by: Pranjal Bajpai <76218069+pranjal2523@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ end of prelloader -->
 
                 <div class="row blog-wrapper">
 			
-		    <div class="col-md-4 margin">
+		    <div class="col-md-4">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -393,7 +393,7 @@ end of prelloader -->
                     </div>	
 		    
 		    
-		    <div class="col-md-4 margin">
+		    <div class="col-md-4">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -414,7 +414,7 @@ end of prelloader -->
                         </div>
                     </div>
 
-                    <div class="col-md-4 margin">
+                    <div class="col-md-4">
 			<!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -434,8 +434,13 @@ end of prelloader -->
                             </div>
                         </div>
                     </div>
+			
+			
+		    <div class="spacer" data-height="30"></div>
+			
+			
 
-                    <div class="col-md-4 margin">
+                    <div class="col-md-4">
                         <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
@@ -456,7 +461,7 @@ end of prelloader -->
                         </div>
                     </div>
 
-                    <div class="col-md-4 margin">
+                    <div class="col-md-4">
                         <!-- item -->
                         <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
                             <div class="thumb">
