Added HealthMate Project
Signed-off-by: Pranjal Bajpai <76218069+pranjal2523@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ end of prelloader -->
                         <li class="nav-item"><a href="#certificate" class="nav-link">Certificates</a></li>
                         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
                         <li class="nav-item"><a href="#contact" class="nav-link">Contact Me</a></li>
-                        <li class="nav-item"><a href="https://drive.google.com/file/d/1IN8jCxTbpc4uI8Y4JAbFH9cY3tU_f2Qn/view?usp=sharing">
+                        <li class="nav-item"><a href="https://drive.google.com/file/d/1ju9yrROz60euCSwvm_3e51ylWwMWCNYy/view?usp=sharing">
                             <i style="font-weight: bold; color: #01e3f8;">Resume</i></a></li>
                     </ul>
                 </div>
@@ -98,7 +98,7 @@ end of prelloader -->
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Pranjal</h1>
-                    <span>I'm a <span class="text-rotating">Collage Student, Computer Lover, Machine learning Enthusiast</span></span>
+                    <span>I'm a <span class="text-rotating">CSE Graduate, Computer Lover, Machine learning Enthusiast</span></span>
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
@@ -370,6 +370,27 @@ end of prelloader -->
                 <div class="spacer" data-height="60"></div>
 
                 <div class="row blog-wrapper">
+		    
+		    <div class="col-md-4">
+			<!-- item -->
+                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                            <div class="thumb">
+                                <a href="http://18.117.227.111/">
+                                    <span class="category">Python Full Stack</span>
+                                </a>
+                                <a href="http://18.117.227.111/">
+                                    <img src="images/blog/1.svg" alt="Post by Pranjal" />
+                                </a>
+                            </div>
+                            <div class="details">
+                                <h4 class="my-0 title"><a href=http://18.117.227.111/>HealthMate</a></h4>
+                                <ul class="list-inline meta mb-0 mt-2">
+                                    <li class="list-inline-item">2023</li>
+                                    <li class="list-inline-item">Pranjal</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>	
 			
 		    <div class="col-md-4">
 			<!-- item -->
