--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <div class="fact-item">
                             <span class="icon icon-fire"></span>
                             <div class="details">
-                                <h3 class="mb-0 mt-0 number"><em id="exp"></em> +</h3>
+                                <h3 class="mb-0 mt-0"><em id="exp"></em> +</h3>
                                 <p class="mb-0">Experience</p>
                             </div>
                         </div>
