--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                     <!-- info -->
                     <h1 class="mb-2 mt-0">Pranjal</h1>
-                    <span><span class="text-rotating">I'm a Python Developer, At Sort String Solutions LLP</span></span>
+                    <span><span class="text-rotating">I'm a Python Developer, At Easebuzz Pvt Ltd </span></span>
 
                     <!-- social icons -->
                     <ul class="social-icons light list-inline mb-0 mt-4">
@@ -273,6 +273,24 @@
                                 <h4 class="my-0 title"><a href="https://sortstring.com/">Sort String Solution LLP</a></h4>
                                 <ul class="list-inline meta mb-0 mt-2">
                                     <li class="list-inline-item">July • 2023</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-4">
+                        <div class="blog-item rounded bg-dark shadow-dark wow fadeIn">
+                            <div class="thumb">
+                                <a href="https://easebuzz.in/">
+                                    <span class="category">SDE II - Full Stack Developer</span>
+                                </a>
+                                <a href="https://easebuzz.in/">
+                                    <img src="images/easebuzz.png" alt="easebuzz logo" />
+                                </a>
+                            </div>
+                            <div class="details">
+                                <h4 class="my-0 title"><a href="https://easebuzz.in/">Easebuzz Pvt ltd</a></h4>
+                                <ul class="list-inline meta mb-0 mt-2">
+                                    <li class="list-inline-item">Jan • 2025</li>
                                 </ul>
                             </div>
                         </div>
